# multimodal-rag-gpt

./: .dockerignore  .env.gpu.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ADMIN_API_KEY_ROTATION.md  DATA_CONSISTENCY_POLICY.md  Dockerfile  Dockerfile.gpu  LIMITS_POLICY.md  MODEL_SHORTLIST_GPU.md  PRODUCTION_CHECKLIST.md  README.md  RUNBOOK_GPU.md  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.monitoring.yml  mkdocs.yml  pyproject.toml
.github/workflows/: auto_tests.yml  code_quality.yml  deploy_docs.yml
backend/: backend_config.gpu.yaml  backend_config.yaml  main.py  worker.py  worker_app.py
backend/api/: endpoints.py
backend/core/: create_collection.py  embedding_providers.py  embeddings.py  image_embeddings.py  llm.py  load_data.py  multimodal_rag.py  qdrant_handler.py  rag.py  vectordb.py
backend/monitoring/: metrics.py
backend/services/: admin_audit.py  admin_rate_limit.py  admin_rate_limiter.py  data_consistency.py  guest_cleanup.py  health_checks.py  ingest.py  ingest_jobs.py  ingest_poller.py  ingest_worker.py  kb.py  request_rate_limiter.py  runtime_config.py  storage.py
backend/utils/: config.py  config_handler.py  load_data.py  loaders.py  log_config.py  qdrant_handler.py  supabase_client.py
docs/en/: FAQ.md  api.md  getting_started.md  index.md  utils.md
docs/ru/: FAQ.md  api.md  getting_started.md  index.md  utils.md
docs/stylesheets/: extra.css
monitoring/prometheus/: prometheus.yml
notebooks/: workflow.ipynb
scripts/: check_gpu_env.py  check_model_gpu.py  ingest_qdrant.py  load_test_ask.py  load_test_upload.sh  smoke_limits.py  smoke_staging.py
supabase/: config.toml
supabase/migrations/: 20260218120000_create_query_history.sql  20260302162000_create_kb_folders_files.sql  20260305190000_create_ingest_jobs.sql  20260305201000_ingest_jobs_claim_lock.sql  20260305205000_ingest_jobs_retry_backoff_dlq.sql  20260305212000_admin_rate_limit.sql  20260306103000_kb_files_content_hash.sql  20260310220000_create_admin_audit_events.sql
tests/integration/: test_embed_text_metrics.py
(+9 files in other folders)
