[project]
name = "multimodal-rag-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "openai>=2.7.2",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pypdf>=6.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "uvicorn>=0.38.0",
]
